Add kRunningOnCompositorButNeedsAdjustment to DCHECK in WillAnimateToOffset

In some cases, ScrollAnimator::WillAnimateToOffset called with run_state_ ==
RunState::kRunningOnCompositorButNeedsAdjustment.

Bug: 825351
Change-Id: I805625d87d469c77564391c83d381eb179c665c8
Reviewed-on: https://chromium-review.googlesource.com/1033015
Reviewed-by: Steve Kobes <skobes@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554790}
Former-commit-id: caec43ce6f2dce67372258d383b42156df883dc3